update home page

--- a/index.html
+++ b/index.html
@@ -2,9 +2,31 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Mayd的个人主页</title>
+  <link rel="stylesheet" href="assets/css/home.css">
 </head>
 <body>
-  <a href="https://mayd21.github.io/blog">个人博客</a>
+  <div class="container">
+    <div class="header">
+      <div class="header-content">
+        <h1>Mayd的个人网站</h1>
+      </div>
+    </div>
+    <div class="content">
+      <div class="content-inner">
+        <div class="content-list">
+          <p>
+            <a href="blog/" target="_blank">📖个人博客</a>
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <p>Mayd</p>
+    </div>
+  </div>
+  
 </body>
 </html>
